--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,18 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+target/
+.settings/
+.springBeans
+.classpath
+.project
+bin/
+.cache
+.gradle
+.idea
+build/
+out/
+*.ipr
+*.iws
+*.iml
